--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,10 @@ h1.banner {
         justify-content: space-around;
 
     }
+    header {
+        width: 100%;
+        position: fixed;
+    }
     .design {
         height: auto;
         width: 40%;
@@ -114,7 +118,31 @@ h1.banner {
             margin: 1%;
         }
     @media screen and (max-width: 640px) {
-        body
+        .design {
+            width: 100%;
+            margin: 2%;
+        }
+        #header-content {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        #name {
+            display: block;
+        }
+        #portfolio-body {
+            margin-top: 25%;
+            width: 100%;
+        }
+        #main-body {
+            margin-top: 25%;
+            width: 100%;
+        }
+        #contact-body {
+            margin-top: 25%;
+            width: 100%;
+        }
+        #nav
     }
+
 
 }
